mockers_derive/tests/compile-fail/where_clause.stderr
error: Where clauses are not supported yet.

 --> $DIR/where_clause.rs:4:9
  |
4 | trait A where Self : 'static {}
  |         ^^^^^
